# ftre

./: .gitignore  AGENTS.md  CONTRIBUTING.md  EVENT_REFACTOR_CHANGELOG.md  README.md  README.zh-CN.md  bug207-investigation.md  config.example.json  langgraph-repo-root.yml  langgraph-types-raw.yml  langgraph-types.py-snapshot.yml  main.py  pyproject.toml  search-results.yml  start.bat  start.py
.github/workflows/: ci.yml
docs/: command-system-redesign.md
docs/superpowers/plans/: 2025-06-26-image-path-refactor.md  2025-06-29-disable-cache-fix-race.md  2025-06-29-volatile-seq-simplify.md  2026-06-25-mcp-plugin-refactor.md  2026-07-03-agentbar-merge.md  2026-07-03-multi-agent-support.md  2026-07-04-assistant-message-kind.md  2026-07-05-message-format-refactor.md  2026-07-18-octo-channel-mvp.md
scripts/: cleanup_old_sessions.py  inspect_amc.py  inspect_session.py  migrate_messages.py  migrate_sessions_db.py
src/ftre/: __init__.py  __main__.py  config.py  main.py  system_prompt.md  trace_store.py
src/ftre/agent/: __init__.py  agent_manager.py  compact_handler.py  compact_manager.py  loop.py  system_prompt.md  turn_executor.py
src/ftre/api/: __init__.py  app.py  routes.py  skill.py
src/ftre/bus/: __init__.py  bus.py  message.py
src/ftre/channel/: __init__.py  base.py  manager.py  subagent_channel.py  (+2 more)
tests/: test_agent_manager.py  test_agent_system_prompt.py  test_compact_algo.py  test_context_config.py  test_e2e.py  test_external_sessions.py  test_gateway_runtime.py  test_image_api.py  test_image_e2e.py  test_image_store.py  test_mcp.py  test_migrate_events.py  test_multimodal_path.py  test_octo_channel.py  test_plugin_tools.py  test_subagent_done_future.py  test_title_gen.py  test_trace_store.py  test_turn_lifecycle.py  test_ws_attachment_persist.py  test_ws_volatile_replay.py
(+45 files in other folders)
