[project]
name = "ftre"
version = "0.1.0"
description = "ftre - AI 编程助手"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "ftre-agent-core",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ftre = "ftre.main:main"

[tool.setuptools.packages.find]
where = ["src"]
