[project]
name = "ftre"
version = "0.1.0"
description = "ftre - AI 编程助手"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "ftre-agent-core>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "aiosqlite>=0.19.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ftre = "ftre.main:main"

[tool.setuptools.packages.find]
where = ["src"]
